Fixed horizontal scroll on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -109,7 +109,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 375px;
+  width: 375px;
   margin-bottom: 30px;
 }
 
@@ -121,11 +121,11 @@ a {
   box-shadow: 0 2px 10px rgb(221, 221, 221);
   border-radius: 0 0 5px 5px;
   padding: 25px 35px;
-  width: 100%;
+  width: 375px;
 }
 
 .product-img {
-  max-width: 100%;
+  width: 100%;
   height: 325px;
 }
 
@@ -178,6 +178,10 @@ a {
 .cart-icon {
   background: url(./images/cart-icon.svg) no-repeat center;
   background-size: auto;
+}
+
+#more-products {
+  cursor: pointer;
 }
 
 .footer-main {
